# BCI-Master

./: .gitignore.txt  2021-12-8_13-40-34_decoder.txt  2021-12-8_13-41-29_decoder.txt  CONTRIBUTING.md  LICENSE  README.md
BCImat/: 2021-12-8_13-40-14_BCI_Task.txt  2021-12-8_13-40-14_BCI_trackers.txt  2021-12-8_13-40-14_spikes.txt  2021-8-19_13-55-21_BCI_Task.txt  2021-8-19_13-55-21_BCI_trackers.txt  2021-8-19_13-55-21_decoder.txt  2021-8-19_13-55-21_spikes.txt  BCI_Loop.asv  BCI_Loop.m  BCI_Thread.m  CheckFeatures.m  ClosedLoop.m  DecoderState.m  EasyVRPNTest.m  FakeMonkey.m  FakeMonkey2.asv  FakeMonkey2.m  Hello.cpp  Kalman_calibrator_class.m  Kalman_decoder_class.asv  Kalman_decoder_class.m  Kalman_decoder_classC.m  MyFigure.m  OLE_calibrator_class.m  OLE_decoder_class.m  PlotUpdateTimeCompare.m  PoissonGaussian.asv  TestBlackrock.m  TestClasses.m  TestDirectionSelection.m  TestFakeMonkey.m  TestPoisson.m  TestSpeed.m  Test_Latencies.m  Test_SimBCI.m  Test_mouse_move.m  calibrator_class.m  compile_and_test.m  decoder_class.m  display_array_properties.m  (+17 more)
BCImat/@GUI_functions/: CheckCorrelation.m
TrackM/: CMakeLists.txt  TrackM.sln  main.cpp  vrpn_server_class.cpp  vrpn_server_class.h
TrackM/Debug/: TrackM.ilk
TrackM/TrackM/: TrackM.vcxproj  TrackM.vcxproj.filters  config.txt  main.cpp  vrpn_server_class.cpp  vrpn_server_class.h
TrackM/TrackM/Debug/: vc120.idb
TrackM/TrackM/Debug/TrackM.tlog/: CL.read.1.tlog  CL.write.1.tlog  TrackM.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TrackM/TrackM/Source Files/: main.cpp
TrackM/TrackM/x64/Debug/: vc120.idb
TrackM/TrackM/x64/Debug/TrackM.tlog/: CL.read.1.tlog  CL.write.1.tlog  TrackM.lastbuildstate  cl.command.1.tlog
paper/: paper.bib  paper.docx  paper.md
(+46 files in other folders)
